--- a/TechTonics/pom.xml
+++ b/TechTonics/pom.xml
@@ -45,6 +45,11 @@
   		<artifactId>jstl</artifactId>
   		<version>1.2</version>
   	</dependency>
+  	<dependency>
+  		<groupId>org.apache.tomcat</groupId>
+  		<artifactId>tomcat-jsp-api</artifactId>
+  		<version>8.5.14</version>
+  	</dependency>
   </dependencies>
   <dependencyManagement>
   	<dependencies>
