--- a/TechTonics/pom.xml
+++ b/TechTonics/pom.xml
@@ -61,6 +61,9 @@
   	</dependencies>
   	
   </dependencyManagement>
+  <build>
+    <finalName>ROOT</finalName>
+  </build>
   <profiles>
     <profile>
      <!-- When built in OpenShift the 'openshift' profile will be used when invoking mvn. -->
